# OpenXDK

./: .cdtproject  .cvsignore  .project  ChangeLog  Credits  Makefile.am  OpenXDK.dsw  OpenXDK.sln  README  README.TXT  README.md  autogen.sh  changelog.txt  configure.in  glibc.dsp  glibc.vcproj  readme.txt  xbox.dsp  xboxkrnl.dsp  xboxkrnl.plg  xboxkrnl.vcproj  xgfx2d.dsp  xgfx2d.vcproj  xhal.dsp  xhal.plg  xhal.vcproj  xinput.dsp  xinput.ncb  xinput.sln  xinput.vcproj  xlibc.dsp  xlibc.vcproj  xusb.dsp  xusb.vcproj  xvga.dsp  xvga.vcproj
Patches/: SDL-1.2.7.diff  SDL_image-1.2.3.diff  SDL_image-2.0.7.diff  SDL_mixer-1.2.5.diff  freetype-2.1.9.diff  newlib-1.12.0.diff  zlib-1.2.1.diff
doc/: apihal.html  bios.html  developing.html  extending.html  faq.html  index.html  installing.html  links.html  msvc.net.txt  msvc6.txt  overview.html  samples.html  style.css  todo.html  xbox.html
include/: Makefile.am  openxdk.h
include/hal/: audio.h  fileio.h  input.h  mouse.h  pad.h  video.h  xbox.h
include/openxdk/: debug.h  openxdk.h
include/xboxkrnl/: dbg.h  ex.h  hal.h  io.h  kernel.h  mm.h  nt.h  ob.h  ps.h  rtl.h  types.h  xbox.h  xboxkrnl.h
include/xgfx2d/: bitmap.h  blit.h  blitters.h  charmap.h  drawprim.h
include/xhal/: NVidia.h  xboxVGA.h  xboxvga_internal.h  xfile.h  xfile_def.h  xfile_internal.h  xhal.h  xnvidia.h  xohci.h  xohci_pci.h  xvga.h  xvga_def.h
include/xinput/: hub.h  misc.h  ohci.h  pad.h  xinput.h
include/xlibc/: ansidecl.h  defs.h  float.h  limits.h  math.h  memcopy.h  stdarg.h  stdio.h  stdlib.h  string.h
include/xusb/: linux_wrapper.h  xusb.h
include/xusb/asm/: bitops.h
include/xvga/: xvga.h  xvga_def.h  xvga_internal.h  xvga_tables.h
lib/: dir.txt
src/: Makefile.am  distclean.sh  install.sh
src/SDL-1.2.7/: Makefile.in  Makefile.xbox  SDL.spec  aclocal.m4  configure
src/SDL-1.2.7/docs/: Makefile.in
src/SDL-1.2.7/docs/html/: Makefile.in
src/SDL-1.2.7/docs/man3/: Makefile.in
src/SDL-1.2.7/include/: Makefile.in
src/SDL-1.2.7/src/: Makefile.in
src/SDL-1.2.7/src/audio/: Makefile.in  SDL_audio.c  SDL_sysaudio.h
src/SDL-1.2.7/src/audio/alsa/: Makefile.in
src/SDL-1.2.7/src/audio/arts/: Makefile.in
src/SDL-1.2.7/src/audio/baudio/: Makefile.in
src/SDL-1.2.7/src/audio/disk/: Makefile.in
src/SDL-1.2.7/src/cdrom/: Makefile.in
src/SDL-1.2.7/src/cpuinfo/: Makefile.in
src/SDL-1.2.7/src/endian/: Makefile.in
src/SDL-1.2.7/src/events/: Makefile.in
src/SDL-1.2.7/src/file/: Makefile.in
src/SDL-1.2.7/src/hermes/: Makefile.in
src/SDL-1.2.7/src/joystick/: Makefile.in
src/SDL-1.2.7/src/main/: Makefile.in
src/SDL-1.2.7/src/thread/: Makefile.in
src/SDL-1.2.7/src/timer/: Makefile.in
src/SDL-1.2.7/src/video/: Makefile.in  SDL_sysvideo.h  SDL_video.c
src/SDL-1.2.7/src/video/xbox/: Makefile.am  Makefile.in  SDL_xboxevents.c  SDL_xboxevents_c.h  SDL_xboxmouse.c  SDL_xboxmouse_c.h  SDL_xboxvideo.c  SDL_xboxvideo.h  riva_mmio.h
src/SDL_image-1.2.3/: Makefile.xbox
src/SDL_mixer-1.2.5/: Makefile.xbox
src/SDL_ttf-2.0.7/: Makefile.xbox
src/cxbe/: Makefile.am  Xbe.cpp  makefile
src/freetype-2.1.9/src/: Makefile.xbox
src/glibc/: __random.c  abs.c  fileio.c  itoa.c  malloc.c  misc_vars.c  sbrk.c  strtol.c
src/glibc/math/: __expm1.c  __rint.c  _fltused.c  atan2.c  drem.c  exp.c  exp__E.c  expm1.c  finite.c  fmod.c  infnan.c  isinf.c  isnan.c  log.c  log1p.c  sincos.c  tanh.c
src/glibc/stdio/: file_io.c  snprintf.c
src/glibc/stdio/attic/: conio.c  file_io.c  snprintf.c
src/glibc/string/: bcmp.c  memchr.c  memcmp.c  memcpy.c  memmove.c  rindex.c  stpncpy.c  strcasecmp.c  strcmp.c  strcpy.c  strfry.c  strncase.c  strstr.c
src/hal/: Makefile.am  audio.c  audioInterrupt.s  fileio.c  input.c  makefile  pad.c  usbInterrupt.s  video.c  xbox.c
src/jpeg-6b/: Makefile.xbox
src/libpng-1.2.7/: Makefile.xbox
src/newlib-1.12.0/: .cvsignore  config.back  config.cache  config.sub  configure.in  maybedep.tmp
src/newlib-1.12.0/etc/: Makefile  config.cache  config.status  configure.info  configure.info-1
src/newlib-1.12.0/i386-pc-xbox/libgloss/: .cvsignore  Makefile  config.cache  config.status
src/newlib-1.12.0/i386-pc-xbox/newlib/: .cvsignore  Makefile  config.cache  config.status
src/newlib-1.12.0/newlib/: configure.host
src/openxdk/: Makefile.am  alloca.c  alloca2.s  cplusplus.cpp  debug.c  makefile  openxdk.c
src/usb/: Makefile.am  bulk.c  hub.c  makefile  ohci.c  usb_wrapper.h
src/usb/include/: boot.h  cromwell_types.h  linux_wrapper.h
src/usb/misc/: malloc.c  misc.c  pci.c
src/usb/sys/: xpad.c  xremote.c
src/xbox/: xboxVGA.c  xbox_bin.c
src/xboxkrnl/: Makefile.am  dbg.c  ex.c  gcc.exe.stackdump  hal.c  io.c  kernel.c  makefile  mm.c  nt.c  ob.c  ps.c  rtl.c  xbox.c  xboxkrnl.def  xboxkrnl.exe.def
src/xgfx2d/: bitmap.c  blit.c  blitters.c  charmap.c  drawprim.c
src/xhal/: NVidia.c  xboxVGA.c  xfile.c  xnvidia.c  xohci.c  xohci_pci.c  xstartup.c  xsysfont.c  xvga.c  xvga_sys.c
src/xinput/: hub.cpp  main.cpp  misc.cpp  ohci.cpp  pad.cpp  xinput.cpp
src/xlibc/: abort.c  abs.c  ctype.c  ctypes.c  div.c  itoa.c  labs.c  ldiv.c  ltoa.c  malloc.c  mbstowcs.c  misc_vars.c  qsort.c  rand.c  sbrk.c  strtol.c
src/xlibc/math/: __scalb.c  acos.c  asin.c  asincos.c  atan.c  atan2.c  ceil.c  copysign.c  cosh.c  exp.c  fabs.c  floor.c  fmod.c  ftol.c  hypot.c  log.c  logb.c  pow.c  rint.c  scalb.c  sincos.c  sinh.c  sqrt.c  tan.c  tanh.c  trig.h
src/xlibc/math/ieee754/: cabs.c  ldexp.c  log10.c  sqrt.c
src/xlibc/stdio/: conio.c  fclose.c  file_io.c  fopen.c  fprintf.c  fread.c  fseek.c  ftell.c  fwrite.c  snprintf.c  sprintf.c
src/xlibc/string/: __memccpy.c  bcopy.c  index.c  memcmp.c  memcpy.c  memset.c  strcasecmp.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strlen.c  strncase.c  strncat.c  strncmp.c  wordcopy.c
src/xusb/core/: buffer_simple.c  config.c  hcd-pci.c  hcd.c  hub.c  message.c  urb.c  usb-debug.c  usb.c
src/xusb/host/: ohci-hcd.c  ohci-hub.c
src/xusb/sys/: BootUSB.c  linuxwrapper.c  usbwrapper.c  xpad.c
src/xvga/: xvga.c  xvga_tables.c
src/zlib-1.2.1/: Makefile.xbox
(+146 files in other folders)
