nobase_include_HEADERS = hal/audio.h hal/fileio.h hal/io.h hal/pad.h hal/video.h hal/xbox.h openxdk/debug.h openxdk/openxdk.h usb/bulk.h usb/hub.h usb/ohci.h xboxkrnl/dbg.h xboxkrnl/ex.h xboxkrnl/hal.h xboxkrnl/io.h xboxkrnl/kernel.h xboxkrnl/mm.h xboxkrnl/nt.h xboxkrnl/ob.h xboxkrnl/ps.h xboxkrnl/rtl.h xboxkrnl/types.h xboxkrnl/winerror.h xboxkrnl/xbox.h xboxkrnl/xboxkrnl.h
