
## Makefile.am for SDL using the xbox video driver

noinst_LTLIBRARIES = libvideo_xbox.la
libvideo_xbox_la_SOURCES = $(XBOX_SRCS)

# The SDL xbox video driver sources
XBOX_SRCS = 			\
	SDL_xboxvideo.h		\
	SDL_xboxevents.c	\
	SDL_xboxevents_c.h	\
	SDL_xboxmouse.c		\
	SDL_xboxmouse_c.h	\
	SDL_xboxvideo.c

